# iceberg

./: .gitignore  CITATION.cff  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
docs/: blank.ipynb  tutorial.ipynb
examples/: .gitignore  animated.py  arrow_animated.py  connect.py  flow_chart.py  logo_float.py  neural_network.py  neural_network_animated.py  neural_network_compute.py  path_animated.py  playground.py  quickstart.py  rectangle_animated.py  simple.py
iceberg/: __init__.py  geometry.py  utils.py
iceberg/animation/: __init__.py  animatable.py  auto_animatable.py  ease.py  scene.py  tween.py
iceberg/arrows/: __init__.py  arrows.py  helpers.py  multilines.py
iceberg/core/: __init__.py  drawable.py  properties.py  renderer.py
iceberg/primitives/: __init__.py  filters.py  image.py  latex.py  layout.py  lines.py  multilines.py  plotting.py  rectangle.py  shapes.py  splines.py  svg.py  text.py  typst.py
iceberg/trees/: __init__.py  tree_layout.py
images/: .gitignore
tests/: scene_tester.py  test_animations.py  test_arrows.py  test_blank.py  test_connect.py  test_dashed.py  test_filters.py  test_flowchart.py  test_neural_net.py  test_paths.py  test_quickstart.py
tests/testdata/nn_compute/: duration.txt
