[metadata]
name = pyiceberg
# Version needs regex in setup.py.
url = https://github.com/revalo/iceberg
project_urls =
    Documentation = https://github.com/revalo/iceberg/README.md
    Code = https://github.com/revalo/iceberg
    Issue tracker = https://github.com/revalo/iceberg/issues
license = MIT
author = Shreyas Kapur
author_email = srkp@berkeley.edu
maintainer = Shreyas Kapur
maintainer_email = srkp@berkeley.edu
description = A compositional diagramming tool for Python.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.